I think this CSS revision fixes the .hero whitespace problem

--- a/style.css
+++ b/style.css
@@ -155,7 +155,9 @@ footer {
     }
 
     .hero {
-      position: fixed;
+      position: relative;
+      height: 80vh;
+      margin-top: -60px;
     }
 
     .clouds {
